Fixed: RTL week numbers are too close to days (compared to LTR mode)

--- a/css/pikaday.css
+++ b/css/pikaday.css
@@ -131,6 +131,9 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     border-spacing: 0;
     border: 0;
 }
+.is-rtl .pika-table {
+    text-align: right;
+}
 
 .pika-table th,
 .pika-table td {
@@ -163,7 +166,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     background: #f5f5f5;
 }
 
-.pika-week {
+.pika-table .pika-week {
+    min-width: 2em;
     font-size: 11px;
     color: #999;
 }
